# ms

./: .bazelrc  .clang-format  .gitignore  MODULE.bazel
data/equip/: composite_bow.textproto  cutlass.textproto  eloon.textproto  fafnir_mistilteinn.textproto  gladius.textproto  jeweled_katar.textproto  long_sword.textproto  machete.textproto  nameless_sword.textproto  sabre.textproto  sword.textproto  traus.textproto
data/items/: axe.textproto  blue_snail_shell.textproto  cold_eye_tail.textproto  evil_eye_tail.textproto  firewood.textproto  green_mushroom_cap.textproto  green_snail_shell.textproto  horny_mushroom_cap.textproto  mixed_block.textproto  mushroom_spore.textproto  orange_mushroom_caps.textproto  red_snail_shell.textproto  squishy_liquid.textproto  stone_golem_rubble.textproto  tree_branch.textproto
data/maps/: BUILD  giant_tree.textproto  golems_temple_4.textproto  golems_temple_entrance.textproto  (+9 more)
src/: BUILD  character.cc  character.h  character.proto  character_stats.cc  character_stats.h  character_stats_test.cc  character_test.cc  combat.cc  combat.h  combat_sim.cc  combat_sim.h  combat_sim_test.cc  combat_test.cc  equip.proto  equip_instance.cc  equip_instance.h  equip_instance_test.cc  equip_stats.cc  equip_stats.h  equip_stats_test.cc  exp_table.cc  exp_table.h  exp_table_test.cc  farming.cc  farming.h  farming_test.cc  frontend.cc  frontend.h  frontend_test.cc  game_state.cc  game_state.h  game_state_test.cc  inventory.cc  inventory.h  inventory_test.cc  item.cc  item.h  item_test.cc  main.cc  (+7 more)
src/combat/: BUILD  (+19 more)
tools/: gen_compile_commands.py
(+167 files in other folders)
