module(name = "ms")

bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "ftxui", version = "6.1.9")
